--- a/index.html
+++ b/index.html
@@ -18,22 +18,30 @@
   </div>
 
   <!-- Task Form Modal -->
-  <div id="taskModal" class="modal hidden">
-    <div class="modal-content">
-      <h2>New Task</h2>
-      <label>Title:<br><input type="text" id="taskTitle" /></label><br>
-      <label>Description:<br><textarea id="taskDesc"></textarea></label><br>
-      <label>Column:<br>
-        <select id="taskColumn">
-          <option value="todo">To Do</option>
-          <option value="inprogress">In Progress</option>
-          <option value="done">Done</option>
-        </select>
-      </label><br><br>
-      <button id="createTask">Create Task</button>
-      <button id="cancelTask">Cancel</button>
-    </div>
+<div id="taskModal" class="modal hidden">
+  <div class="modal-content">
+    <h2>New Task</h2>
+    <label>Title:<br><input type="text" id="taskTitle" /></label><br>
+    <label>Description:<br><textarea id="taskDesc"></textarea></label><br>
+    <label>Label (Tag):<br>
+      <select id="taskLabel">
+        <option value="">None</option>
+        <option value="urgent">Urgent</option>
+        <option value="work">Work</option>
+        <option value="personal">Personal</option>
+      </select>
+    </label><br>
+    <label>Column:<br>
+      <select id="taskColumn">
+        <option value="todo">To Do</option>
+        <option value="inprogress">In Progress</option>
+        <option value="done">Done</option>
+      </select>
+    </label><br><br>
+    <button id="createTask">Create Task</button>
+    <button id="cancelTask">Cancel</button>
   </div>
+</div>
 
   <!-- Main Board -->
   <main>
