--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <h1>My Task Board</h1>
   </header>
 
+  <!-- Add Task Button -->
   <div class="add-task-container">
     <button id="openTaskForm">➕ Add Task</button>
   </div>
 
+  <!-- Modal for Task Creation -->
   <div id="taskModal" class="modal hidden">
     <div class="modal-content">
       <h2>New Task</h2>
@@ -41,16 +43,19 @@
     </div>
   </div>
 
+  <!-- Task Board -->
   <main>
     <div class="board">
       <div class="column">
         <div class="column-header" contenteditable="true">To Do</div>
         <div class="task-list" id="todo"></div>
       </div>
+
       <div class="column">
         <div class="column-header" contenteditable="true">In Progress</div>
         <div class="task-list" id="inprogress"></div>
       </div>
+
       <div class="column">
         <div class="column-header" contenteditable="true">Done</div>
         <div class="task-list" id="done"></div>
@@ -58,6 +63,7 @@
     </div>
   </main>
 
+  <!-- Main Logic -->
   <script src="script.js"></script>
 </body>
 </html>
