--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <h1>My Task Board</h1>
   </header>
 
-  <!-- Add Task Button -->
   <div class="add-task-container">
     <button id="openTaskForm">➕ Add Task</button>
   </div>
 
-  <!-- Modal for Task Creation -->
   <div id="taskModal" class="modal hidden">
     <div class="modal-content">
       <h2>New Task</h2>
@@ -43,19 +41,16 @@
     </div>
   </div>
 
-  <!-- Task Board -->
   <main>
     <div class="board">
       <div class="column">
         <div class="column-header" contenteditable="true">To Do</div>
         <div class="task-list" id="todo"></div>
       </div>
-
       <div class="column">
         <div class="column-header" contenteditable="true">In Progress</div>
         <div class="task-list" id="inprogress"></div>
       </div>
-
       <div class="column">
         <div class="column-header" contenteditable="true">Done</div>
         <div class="task-list" id="done"></div>
@@ -63,7 +58,8 @@
     </div>
   </main>
 
-  <!-- Main Logic -->
   <script src="script.js"></script>
 </body>
+</html>
+
 </html>
