--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   </main>
 
   <script src="script.js"></script>
+  
+  <div id="trash" class="trash-drop-zone">
+  🗑️ Trash
+</div>
 </body>
-</html>
-
 </html>
