--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <h1>My Task Board</h1>
   </header>
 
+  <!-- Add Task Button -->
   <div class="add-task-container">
     <button id="openTaskForm">➕ Add Task</button>
   </div>
 
+  <!-- Task Modal -->
   <div id="taskModal" class="modal hidden">
     <div class="modal-content">
       <h2>New Task</h2>
@@ -41,6 +43,7 @@
     </div>
   </div>
 
+  <!-- Task Board -->
   <main>
     <div class="board">
       <div class="column">
@@ -58,10 +61,11 @@
     </div>
   </main>
 
+  <!-- Script & Trash -->
   <script src="script.js"></script>
-  
+
   <div id="trash" class="trash-drop-zone">
-  🗑️ Trash
-</div>
+    🗑️ Trash
+  </div>
 </body>
 </html>
